--- a/onlineshoppingpurchasingintention.ipynb
+++ b/onlineshoppingpurchasingintention.ipynb
@@ -27,10 +27,10 @@
     "<br>**AY2025/2026 OCTOBER SEMESTER**\n",
     "\n",
     "**PROJECT PROGRAM CODES**\n",
-    "* Student Name (Matric Number)  :\n",
-    "* Tutorial Group                :  \n",
-    "* Tutor\t\t\t\t\t\t    :  \n",
-    "* Submission Date               : \n"
+    "* Student Name (Matric Number)  : Ng Hong Long (2401425J)\n",
+    "* Tutorial Group                : B01\n",
+    "* Tutor\t\t\t\t\t\t    : Mr Srivastava Ruchir\n",
+    "* Submission Date               : 11 February 2026\n"
    ]
   },
   {
@@ -54,12 +54,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "a85eed7a",
    "metadata": {},
    "outputs": [],
    "source": [
-    "## Import libraries\n"
+    "## Import libraries\n",
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "import seaborn as sns\n",
+    "import plotly"
    ]
   },
   {
@@ -67,8 +72,79 @@
    "id": "44844094",
    "metadata": {},
    "source": [
-    "# 1. Business Understanding\n",
-    "Goal: ?"
+    "# 1. Business Understanding\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "82b1dfac",
+   "metadata": {},
+   "source": [
+    "## 1.1 Defining the Real World Problem\n",
+    "E-commerce platforms struggle to identify high-intent users during a browsing session, resulting in missed conversion opportunities and inefficient allocation of marketing resources."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "dd54280b",
+   "metadata": {},
+   "source": [
+    "## 1.2 Translate Business Problem → ML Problem\n",
+    "To address this problem, the task is framed as a supervised binary classification problem, where the objective is to predict whether an active browsing session will result in a purchase (Revenue = True/False) based on user behaviour, engagement metrics, and session attributes."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8a199840",
+   "metadata": {},
+   "source": [
+    "## 1.3 Define Business Objective vs ML Objective\n",
+    "Business Objective\n",
+    "- Increase conversion rates and reduce wasted marketing spend by identifying high-intent users early.\n",
+    "\n",
+    "ML Objective\n",
+    "- Build a predictive model that accurately distinguishes purchasing sessions from non-purchasing sessions, with particular emphasis on correctly identifying potential buyers."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c48b2283",
+   "metadata": {},
+   "source": [
+    "## 1.4 Defining Success Critieria\n",
+    "Success Criteria\n",
+    "- The model should outperform a baseline classifier.\n",
+    "- It should achieve strong Recall and F1-score for the purchasing class.\n",
+    "- The model must generalise well and be deployable in a real-time web application."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b3078afe",
+   "metadata": {},
+   "source": [
+    "## 1.5 Stakeholders & Impact\n",
+    "Target Users / Stakeholders\n",
+    "- E-commerce businesses and digital marketing teams seeking to improve conversion efficiency.\n",
+    "- Product managers optimising user experience and engagement strategies."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "35c7e43f",
+   "metadata": {},
+   "source": [
+    "## 1.6 Dataset Justification\n",
+    "The Online Shoppers Purchasing Intention Dataset is sourced from the UCI Machine Learning Repository and is based on real user browsing sessions collected over a one-year period. It contains realistic behavioural metrics commonly used in industry analytics tools, making it suitable for real-world modelling and deployment."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f2e6f102",
+   "metadata": {},
+   "source": [
+    "## 1.7 Summary of Business Understanding\n",
+    "This project aims to solve a real-world e-commerce conversion problem by predicting purchase intention using supervised machine learning. By framing the task from both business and technical perspectives, the project ensures that subsequent data analysis, model development, and evaluation are aligned with practical deployment and business impact."
    ]
   },
   {
